# Core-Portal

./: .codecov.yml  .dockerignore  .env  .gitattributes  .gitignore  .pylintrc  CHANGELOG.md  Makefile  README.md  bitbucket-pipelines.yml  chore-remove-data-files-btn-pr-desc.md  mise.toml  package-lock.json  package.json  refactor-WP-791-dropdown-menu-pr-desc.md  temp.txt
server/: .bowerrc  .coveragerc  .flake8  README.md  celerybeat-schedule  conftest.py  manage.py  package.json  pyproject.toml  pytest.ini  requirements.txt  requirements.txt.bak  webpack.config.js
server/conf/: rabbitmq.conf  rabbitmq.sample.conf
server/conf/camino/: .env  dev.env  docker-compose.override.yml  pprd.env  prod.env
server/conf/cms/: secrets.sample.py  settings_custom.sample.py  settings_default.py
server/conf/cms/settings/: settings_default.py
server/conf/cms/uwsgi/: uwsgi.ini
server/conf/docker/: .env  Dockerfile  docker-compose-dev.all.debug.yml  docker-compose.yml
server/conf/elasticsearch/: elasticsearch.sample.yml  elasticsearch.yml
server/conf/env_files/: db_pool.sample.env  mysql.env  mysql.sample.env  portal.sample.env  rabbitmq.env  rabbitmq.sample.env
server/conf/nginx/: cep.dev.conf  cep.dev.crt  cep.dev.key  error.html  nginx.conf
server/conf/nginx/certificates/: 3dem.ca.key  3dem.ca.pem  3dem.dev.crt  3dem.dev.csr  3dem.dev.ext  3dem.dev.key  3dem.srl  ca.key  (+12 more)
server/conf/pgbouncer/: pgbouncer.sample.ini
server/conf/systems/: minio.dev.json
server/conf/uwsgi/: uwsgi_core.ini  uwsgi_params
server/custom_accounts/: urls.py  views.py
server/portal/: asgi.py  celery.py  celery_app.py  middleware.py  routing.py  urls.py  webhooks.py  websockets.py  wsgi.py  wsgi_websocket.py
server/portal/.docs/: Makefile
server/portal/apps/: __init__.py
server/portal/decorators/: api_authentication.py  unit_test.py
server/portal/exceptions/: api.py
server/portal/fixtures/: accounts.json  app-tray.json  app-with-array.json  auth.json  google-drive-token.json  job-submission.json  migrate-projects.json  tas_project_systems.json  user-data.json  users.json
server/portal/libs/: exceptions.py  form_fields.py
server/portal/settings/: __init__.py  data_depot.py  elasticsearch.example.py  elasticsearch.py  secrets.sample.py  setting_local.py  settings.py  settings_agave.example.py  settings_agave.py  settings_celery.example.py  settings_celery.py  settings_common.py  settings_custom.example.py  settings_default.py  settings_django_cms.py  settings_forms.py  settings_local.example.py  settings_local.py  settings_logging.py  settings_overrides.example.py  settings_secret.example.py  settings_secret.sample.py  unit_test_settings.py  workspace.py
server/portal/static/: README.md
server/portal/templates/: base.html  base.j2  cms_page.html
server/portal/templatetags/: sd2e_nav_tags.py
server/portal/utils/: __init__.py  contextprocessors.py  decorators.py  encryption.py  exceptions.py  fields.py  jwt_auth.py  translations.py  unit_test.py
server/portal/views/: base.py  unit_test.py  views.py
(+2390 files in other folders)
