[project]
name = "portal"
version = "3.0.0"
description = "Django backend for the core portal."
authors = [
  { name = "TACC-WMA", email = "wma-portals@tacc.utexas.edu" },
]
readme = "README.md"
requires-python = "^3.11"
dynamic = [ "dependencies" ]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
Django = "^4.2"
elasticsearch-dsl = "^7.2.1"
paramiko = "^3.4.0"
rt = "^2.0.0"
psycopg2 = "^2.9.6"
django-settings-export = "^1.2.1"
redis = "^4.5.4"
celery = "^5.2.2"
django-termsandconditions = "^2.0.11"
PyJWT = "^2.6.0"
kombu = "^5.2.3"
cryptography = "^44.0.1"
cached-property = "^1.5.1"
ipython = "^9.0.2"
pycryptodome = "^3.19.1"
elasticsearch = "^7.7.1"
uwsgi = "^2.0.22"
requests = "^2.32.3"
django-impersonate = "^1.5"
channels = "^4.0.0"
channels-redis = "^4.1.0"
daphne = "^4.0.0"
pytas = {git = "https://bitbucket.org/taccaci/pytas.git", tag = "v1.6.0"}
google-auth = "^1.23.0"
google-auth-oauthlib = "^0.4.2"
google-api-python-client = "^1.12.5"
jsonpickle = "^1.4.1"
python-magic = "^0.4.18"
zeep = "^4.1.0"
tapipy = "^1.8.1"
gevent = "^23.9.1"
pymemcache = "^4.0.0"
twisted = {extras = ["http2", "tls"], version = "^24.11.0"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
mock = "^5.0.2"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-asyncio = "^0.21.1"
flake8 = "^6.0.0"
coverage = "^7.2.5"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
